--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.9.1
 Django==5.2.4
 django-widget-tweaks==1.5.0
+gunicorn==23.0.0
+packaging==25.0
+python-dotenv==1.1.1
 sqlparse==0.5.3
-gunicorn
